# headingdocx

./: .gitignore  README.md  pyproject.toml  setup.py
headingdocx/: __init__.py  core.py  heading_utils.py
headingdocx-api/: .gitignore  README.md  pyproject.toml
headingdocx-api/app/: __init__.py  api.py  main.py
tests/: test_core.py
