[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "headingdocx-api"
version = "0.1.0"
description = "REST API service for headingdocx toolkit"
authors = [
    { name = "YankoQiu", email = "yanko.qiu@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-docx"
]
